# csci-5980-homework

./: .dockerignore  Dockerfile  README.md  benchmark.py  docker-compose.yml  main.py  pyproject.toml  router.py
hw1_basic_kv_store.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
