[tool.setuptools]
py-modules= ["main", "router"]

[project]
name = "hw1-basic-kv-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "uhashring>=2.3",
    "httpx>=0.27.0",
]
